--- a/sobre.html
+++ b/sobre.html
@@ -204,6 +204,13 @@
 
     </footer>
 
+    <a id="configButton" class="hide" href="administrar.html">
+        <i id="configIcon" class="float-icon-site bg-site fas fa-user-cog fa-4x"></i>
+    </a>
+    <button id="logoutButton" class="hide" type="submit">
+        <i id="logoutIcon" class="float-icon-site bg-danger fas fa-sign-out-alt fa-4x"></i>
+    </button>
+
 </body>
 
 </html>
