Correção de espaçamento entre botoes

--- a/login.html
+++ b/login.html
@@ -103,7 +103,7 @@
                         <input type="password" name="password" id="pass" required>
                         <label for="password" class="label-site"><span class="content-site">Senha</span></label>
                     </div>
-                    <button type="submit" id="loginButton" class="btn bg-site text-white float-right">Log
+                    <button type="submit" id="loginButton" class="d-block btn bg-site text-white ml-auto">Log
                         in</button>
 
                 </form>
