--- a/administrar.html
+++ b/administrar.html
@@ -110,7 +110,7 @@
                         <label for="title" class="label-site"><span class="content-site">Título</span></label>
                     </div>
                     <div class="d-flex col-12 col-md-8 p-0 mx-auto my-3 form-site">
-                        <input type="text" name="sinopse" id="sinopse"required>
+                        <input type="text" name="sinopse" id="sinopse" required>
                         <label for="sinopse" class="label-site"><span class="content-site">Sinopse</span></label>
                     </div>
                     <div class="d-flex col-12 col-md-8 p-0 mx-auto my-3 form-site">
@@ -119,7 +119,8 @@
                     </div>
 
                     <div class="d-flex mx-auto my-auto"></div>
-                    <button type="submit" id="addButton" class="btn bg-site text-white float-right">Adicionar</button>
+                    <button type="submit" id="addButton"
+                        class="d-block btn bg-site text-white mx-auto">Adicionar</button>
 
                 </form>
 
@@ -150,9 +151,11 @@
                         <label for="description" class="label-site"><span class="content-site">Descrição</span></label>
                     </div>
 
-                    <button type="submit" id="deleteButton" class="btn btn-danger float-right ml-3">Remover</button>
+                    <div class="d-flex col-12 col-md-6 mx-auto">
+                    <button type="submit" id="deleteButton" class="btn btn-danger mx-auto">Remover</button>
                     <button type="submit" id="updateButton"
-                        class="btn bg-site text-white float-right">Atualizar</button>
+                        class="btn bg-site text-white mx-auto">Atualizar</button>
+                    </div>
 
                 </form>
 
