Sistema de mini-curiosidades funcionando

--- a/curiosidades.html
+++ b/curiosidades.html
@@ -111,15 +111,6 @@
             <!-- Hoverzoons -->
             <div id="hoverzoons" class="row col-12 mx-auto my-5">
 
-                <div class="hoverzoom mx-auto my-3 my-md-auto">
-                    <img src="images/pao_arabe_3.png" alt="Hover Zoom CSS3" />
-                    <div class="retina">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, temporibus, repellat?
-                            Placeat nihil itaque culpa eu.</p>
-                        <a href="#">Saiba mais</a>
-                    </div>
-                </div>
-
             </div>
 
         </div>
@@ -232,6 +223,7 @@
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-storage.js"></script>
 
     <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
