--- a/administrar.html
+++ b/administrar.html
@@ -102,7 +102,7 @@
                 <form class="col-12 mx-auto my-auto">
 
                     <div class="d-flex col-12 col-md-8 p-0 mx-auto my-3">
-                        <input type="file" name="image" id="photo" accept="image/*" required>
+                        <input type="file" name="image" id="image" accept="image/*">
                         <label for="image"></label>
                     </div>
                     <div class="d-flex col-10 col-md-4 p-0 mx-auto my-3 form-site">
@@ -274,6 +274,7 @@
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-storage.js"></script>
 
     <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
