--- a/index.html
+++ b/index.html
@@ -143,15 +143,6 @@
             <!-- Hoverzoons -->
             <div id="hoverzoons" class="row col-12 mx-auto my-5">
 
-                <div class="hoverzoom mx-auto my-3 my-md-auto">
-                    <img src="images/pao_arabe_3.png" alt="Hover Zoom CSS3" />
-                    <div class="retina">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, temporibus, repellat?
-                            Placeat nihil itaque culpa eu.</p>
-                        <a href="#">Saiba mais</a>
-                    </div>
-                </div>
-
             </div>
 
         </div>
@@ -288,6 +279,7 @@
         firebase.analytics();
     </script>
 
+<script src="personal_js/read-curiosidades.js"></script>
     <script src="personal_js/logout.js"></script>
 
 </body>
