Sistema de posts atualizado

--- a/curiosidades.html
+++ b/curiosidades.html
@@ -108,12 +108,14 @@
                 <h2 class="card-title">Saiba as melhores curiosidades sobre a vida culinária.</h2>
             </div>
 
-            <!-- Hoverzoons -->
-            <div id="hoverzoons" class="row col-12 mx-auto my-5">
+            <!-- Cards -->
+            <div class="col-12 mx-auto my-5 py-5">
+
+                <div id="cards-curiosities" class="row">
+
+                </div>
 
             </div>
-
-        </div>
 
     </section>
 
