--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         firebase.analytics();
     </script>
 
-<script src="personal_js/read-curiosidades.js"></script>
+<script src="personal_js/read-index.js"></script>
     <script src="personal_js/logout.js"></script>
 
 </body>
