--- a/administrar.html
+++ b/administrar.html
@@ -106,6 +106,10 @@
                         <label for="image"></label>
                     </div>
                     <div class="d-flex col-10 col-md-4 p-0 mx-auto my-3 form-site">
+                        <input type="text" name="author" id="author" required>
+                        <label for="author" class="label-site"><span class="content-site">Autor</span></label>
+                    </div>
+                    <div class="d-flex col-10 col-md-4 p-0 mx-auto my-3 form-site">
                         <input type="text" name="title" id="title" required>
                         <label for="title" class="label-site"><span class="content-site">Título</span></label>
                     </div>
