Atualização de link para instagram

--- a/curiosidades.html
+++ b/curiosidades.html
@@ -89,10 +89,10 @@
         </div>
 
         <!-- Title -->
-        <div id="title" class="d-block col-10 row col-10 mx-auto my-5">
-            <h1 class="d-none d-md-block col-10 display-3 mx-auto text-center text-white">Curiosidades
+        <div id="title" class="d-block col-10 mx-auto my-5">
+            <h1 class="d-none d-md-block col-12 display-3 mx-auto text-center text-white">Curiosidades
             </h1>
-            <h1 class="d-sm-none col-10 mx-auto text-center text-white">Curiosidades</h1>
+            <h1 class="d-sm-none col-12 mx-auto text-center text-white">Curiosidades</h1>
         </div>
 
     </section>
