--- a/sobre.html
+++ b/sobre.html
@@ -74,7 +74,7 @@
                             <a class="nav-link nav-link-site" href="cardapio.html">Cardápio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-link-site" href="#">Curiosidades</a>
+                            <a class="nav-link nav-link-site" href="curiosidades.html">Curiosidades</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link nav-link-site" href="https://www.instagram.com/lepaincaseiro/"><i
