Atualização de cardápio e rodapé

--- a/administrar.html
+++ b/administrar.html
@@ -206,16 +206,16 @@
                     <h3 class="text-white">Menu</h3>
 
                     <div class="my-1">
-                        <a class="text-secondary" href=""><i class="fas fa-arrow-right fa-1x pr-2"></i>Home</a>
+                        <a class="text-secondary" href="index.html"><i class="fas fa-arrow-right fa-1x pr-2"></i>Home</a>
                     </div>
                     <div class="my-1">
-                        <a class="text-secondary" href=""><i class="fas fa-arrow-right fa-1x pr-2"></i>Sobre</a>
+                        <a class="text-secondary" href="sobre.html"><i class="fas fa-arrow-right fa-1x pr-2"></i>Sobre</a>
                     </div>
                     <div class="my-1">
-                        <a class="text-secondary" href=""><i class="fas fa-arrow-right fa-1x pr-2"></i>Cardápio</a>
+                        <a class="text-secondary" href="cardapio.html"><i class="fas fa-arrow-right fa-1x pr-2"></i>Cardápio</a>
                     </div>
                     <div class="my-1">
-                        <a class="text-secondary" href=""><i class="fas fa-arrow-right fa-1x pr-2"></i>Curiosidades</a>
+                        <a class="text-secondary" href="curiosidades.html"><i class="fas fa-arrow-right fa-1x pr-2"></i>Curiosidades</a>
                     </div>
 
                 </div>
