--- a/cardapio.html
+++ b/cardapio.html
@@ -105,7 +105,7 @@
 
                 <div class="col-sm-12 col-md-4 mx-auto mb-5">
                     <div class="card my-3 levitate">
-                        <img class="card-img-top" src="images/croissant.png">
+                        <img class="card-img-top" src="images/croissant_aberto.png">
                         <div class="card-body">
                             <h5 class="card-title">Kit 5 Croissants</h5>
                             <h6 class="text-muted card-substitle mb-2">R$ 15,00</h6>
@@ -218,16 +218,16 @@
                     <h3 class="text-white">Menu</h3>
 
                     <div class="my-1">
-                        <a class="text-secondary" href=""><i class="fas fa-arrow-right fa-1x pr-2"></i>Home</a>
+                        <a class="text-secondary" href="index.html"><i class="fas fa-arrow-right fa-1x pr-2"></i>Home</a>
                     </div>
                     <div class="my-1">
-                        <a class="text-secondary" href=""><i class="fas fa-arrow-right fa-1x pr-2"></i>Sobre</a>
+                        <a class="text-secondary" href="sobre.html"><i class="fas fa-arrow-right fa-1x pr-2"></i>Sobre</a>
                     </div>
                     <div class="my-1">
-                        <a class="text-secondary" href=""><i class="fas fa-arrow-right fa-1x pr-2"></i>Cardápio</a>
+                        <a class="text-secondary" href="cardapio.html"><i class="fas fa-arrow-right fa-1x pr-2"></i>Cardápio</a>
                     </div>
                     <div class="my-1">
-                        <a class="text-secondary" href=""><i class="fas fa-arrow-right fa-1x pr-2"></i>Curiosidades</a>
+                        <a class="text-secondary" href="curiosidades.html"><i class="fas fa-arrow-right fa-1x pr-2"></i>Curiosidades</a>
                     </div>
 
                 </div>
