--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
                     <h6 class="card-subtitle mb-2 text-muted">SOBRE</h6>
                     <h2 class="card-title">Pães caseiros sem conservantes e sob
                         encomenda</h2>
-                    <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o
-                        conteúdo do card.</p>
+                    <p class="card-text">Le Pain Caseiro foi pensado e criado em plena pandemia - descobrimos o prazer de
+                        fazer massas artesanais saborosas para a familia e amigos. Consequentimente decidimos expandir a produção desses
+                        pães saborosos com aromas especiais naturais a todos que apreciam um bom pão caseiro.</p>
                     <a class="btn transition-site py-3 px-5"
                         href="https://api.whatsapp.com/send?phone=5571999020336&text=Olá, tenho interesses em seus produtos !">
                         <i class="fab fa-whatsapp pr-3"></i>Abrir Whatsapp</a>
@@ -186,16 +187,16 @@
                     <h3 class="text-white">Menu</h3>
 
                     <div class="my-1">
-                        <a class="text-secondary" href=""><i class="fas fa-arrow-right fa-1x pr-2"></i>Home</a>
+                        <a class="text-secondary" href="index.html"><i class="fas fa-arrow-right fa-1x pr-2"></i>Home</a>
                     </div>
                     <div class="my-1">
-                        <a class="text-secondary" href=""><i class="fas fa-arrow-right fa-1x pr-2"></i>Sobre</a>
+                        <a class="text-secondary" href="sobre.html"><i class="fas fa-arrow-right fa-1x pr-2"></i>Sobre</a>
                     </div>
                     <div class="my-1">
-                        <a class="text-secondary" href=""><i class="fas fa-arrow-right fa-1x pr-2"></i>Cardápio</a>
+                        <a class="text-secondary" href="cardapio.html"><i class="fas fa-arrow-right fa-1x pr-2"></i>Cardápio</a>
                     </div>
                     <div class="my-1">
-                        <a class="text-secondary" href=""><i class="fas fa-arrow-right fa-1x pr-2"></i>Curiosidades</a>
+                        <a class="text-secondary" href="curiosidades.html"><i class="fas fa-arrow-right fa-1x pr-2"></i>Curiosidades</a>
                     </div>
 
                 </div>
@@ -279,7 +280,7 @@
         firebase.analytics();
     </script>
 
-<script src="personal_js/read-index.js"></script>
+    <script src="personal_js/read-index.js"></script>
     <script src="personal_js/logout.js"></script>
 
 </body>
