--- a/sobre.html
+++ b/sobre.html
@@ -27,7 +27,8 @@
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Montserrat+Alternates&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Montserrat+Alternates&display=swap"
+        rel="stylesheet">
 
     <!-- Script Roll -->
     <script>
@@ -101,9 +102,10 @@
                 <div class="col-12 col-md-6 ml-auto my-auto">
                     <h2 class="card-title text-site"><strong>Pães caseiros sem conservantes e sob
                             encomenda</strong></h2>
-                    <p class="card-text text-white">Um exemplo de texto rápido para construir o título do card e fazer
-                        preencher o
-                        conteúdo do card.</p>
+                    <p class="card-text text-white">Descobrimos
+                        o prazer de fazer massas artesanais saborosas para a familia e amigos. Consequentimente
+                        decidimos expandir a produção desses pães saborosos com aromas especiais naturais a todos que
+                        apreciam um bom pão caseiro.</p>
                 </div>
 
             </div>
@@ -149,16 +151,16 @@
                     <h3 class="text-white">Menu</h3>
 
                     <div class="my-1">
-                        <a class="text-secondary" href=""><i class="fas fa-arrow-right fa-1x pr-2"></i>Home</a>
+                        <a class="text-secondary" href="index.html"><i class="fas fa-arrow-right fa-1x pr-2"></i>Home</a>
                     </div>
                     <div class="my-1">
-                        <a class="text-secondary" href=""><i class="fas fa-arrow-right fa-1x pr-2"></i>Sobre</a>
+                        <a class="text-secondary" href="sobre.html"><i class="fas fa-arrow-right fa-1x pr-2"></i>Sobre</a>
                     </div>
                     <div class="my-1">
-                        <a class="text-secondary" href=""><i class="fas fa-arrow-right fa-1x pr-2"></i>Cardápio</a>
+                        <a class="text-secondary" href="cardapio.html"><i class="fas fa-arrow-right fa-1x pr-2"></i>Cardápio</a>
                     </div>
                     <div class="my-1">
-                        <a class="text-secondary" href=""><i class="fas fa-arrow-right fa-1x pr-2"></i>Curiosidades</a>
+                        <a class="text-secondary" href="curiosidades.html"><i class="fas fa-arrow-right fa-1x pr-2"></i>Curiosidades</a>
                     </div>
 
                 </div>
