Correção de textos

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <h2 class="card-title">Pães caseiros sem conservantes e sob
                         encomenda</h2>
                     <p class="card-text">Le Pain Caseiro foi pensado e criado em plena pandemia - descobrimos o prazer de
-                        fazer massas artesanais saborosas para a familia e amigos. Consequentimente decidimos expandir a produção desses
+                        fazer massas artesanais saborosas para a familia e amigos. Consequentemente decidimos expandir a produção desses
                         pães saborosos com aromas especiais naturais a todos que apreciam um bom pão caseiro.</p>
                     <a class="btn transition-site py-3 px-5"
                         href="https://api.whatsapp.com/send?phone=5571999020336&text=Olá, tenho interesses em seus produtos !">
