--- a/sobre.html
+++ b/sobre.html
@@ -103,7 +103,7 @@
                     <h2 class="card-title text-site"><strong>Pães caseiros sem conservantes e sob
                             encomenda</strong></h2>
                     <p class="card-text text-white">Descobrimos
-                        o prazer de fazer massas artesanais saborosas para a familia e amigos. Consequentimente
+                        o prazer de fazer massas artesanais saborosas para a familia e amigos. Consequentemente
                         decidimos expandir a produção desses pães saborosos com aromas especiais naturais a todos que
                         apreciam um bom pão caseiro.</p>
                 </div>
