--- a/curiosidades.html
+++ b/curiosidades.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="personal_css/hoverzoom.css" type="text/css">
 
     <!-- Optional Scripts -->
-    <script type="text/javascript" src="https://kit.fontawesome.com/30b455b9ab.js"></script>
+    <script src="https://kit.fontawesome.com/f027fe51cc.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
