Atualização de imagem

--- a/index.html
+++ b/index.html
@@ -232,9 +232,9 @@
             <div class="col-12 text-center text-white mt-2">
                 <blockquote>
                     <p>&copy 2020 Todos os direitos reservados.</p>
-                    <footer class="blockquote-footer text-white">By <cite><a class="text-site" target=""
+                    <footer class="text-white"><sup>POWERED BY</sup><a class="text-site" target=""
                                 href="https://www.messias.gq">Messias
-                                Nunesmaia</a></cite></footer>
+                                Nunesmaia</a></footer>
                 </blockquote>
             </div>
 
