--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
                 <!-- Image -->
                 <div class="col-12 col-md-3 mx-auto my-auto">
-                    <img class="col-inner rounded shadow" src="images/croissant_story.png" alt="croissant_story">
+                    <img class="col-inner rounded shadow" src="images/croissant_story.jpeg" alt="croissant_story">
                 </div>
 
                 <!-- Text -->
