Correção na chamada de imagens

--- a/cardapio.html
+++ b/cardapio.html
@@ -105,7 +105,7 @@
 
                 <div class="col-sm-12 col-md-4 mx-auto mb-5">
                     <div class="card my-3 levitate">
-                        <img class="card-img-top" src="images/croissant_aberto.jpeg">
+                        <img class="card-img-top" src="images/croissant_aberto.jpg">
                         <div class="card-body">
                             <h5 class="card-title">Kit 5 Croissants</h5>
                             <h6 class="text-muted card-substitle mb-2">R$ 15,00</h6>
@@ -119,7 +119,7 @@
 
                 <div class="col-sm-12 col-md-4 mx-auto mb-5">
                     <div class="card my-3 levitate">
-                        <img class="card-img-top" src="images/pain_au_chocolat.jpeg">
+                        <img class="card-img-top" src="images/pain_au_chocolat.jpg">
                         <div class="card-body">
                             <h5 class="card-title">Kit 5 Pain au chocolat</h5>
                             <h6 class="text-muted card-substitle mb-2">R$ 25,00</h6>
@@ -133,7 +133,7 @@
 
                 <div class="col-sm-12 col-md-4 mx-auto mb-5">
                     <div class="card my-3 levitate">
-                        <img class="card-img-top" src="images/pao_italiano_2.jpeg">
+                        <img class="card-img-top" src="images/pao_italiano_2.jpg">
                         <div class="card-body">
                             <h5 class="card-title">Pão Italiano</h5>
                             <h6 class="text-muted card-substitle mb-2">R$ 10,00</h6>
@@ -147,7 +147,7 @@
 
                 <div class="col-sm-12 col-md-4 ml-auto mb-5">
                     <div class="card my-3 levitate">
-                        <img class="card-img-top" src="images/pao_arabe_2.jpeg">
+                        <img class="card-img-top" src="images/pao_arabe_2.jpg">
                         <div class="card-body">
                             <h5 class="card-title">Kit 8 Pães Árabes</h5>
                             <h6 class="text-muted card-substitle mb-2">R$ 12,00</h6>
@@ -161,7 +161,7 @@
 
                 <div class="col-sm-12 col-md-4 mr-auto mb-5">
                     <div class="card my-3 levitate">
-                        <img class="card-img-top" src="images/novo_experimento_2.jpeg">
+                        <img class="card-img-top" src="images/novo_experimento_2.jpg">
                         <div class="card-body">
                             <h5 class="card-title">Pão Semi-integral castanhas do pará</h5>
                             <h6 class="text-muted card-substitle mb-2">R$ 14,25</h6>
