--- a/sobre.html
+++ b/sobre.html
@@ -95,7 +95,7 @@
 
                 <!-- Image -->
                 <div class="col-12 col-md-5 mx-auto mt-auto mb-3">
-                    <img class="col-inner rounded shadow" src="images/novo_experimento_2.png" alt="croissant_story">
+                    <img class="col-inner rounded shadow" src="images/novo_experimento_2.jpg" alt="novo_experimento_2">
                 </div>
 
                 <!-- Text -->
